--- a/multilib-w64-mingw32/Dockerfile
+++ b/multilib-w64-mingw32/Dockerfile
@@ -1,4 +1,9 @@
-# This uses the Debian (or Ubuntu) cross compiler to build a native gcc for win32 with multilib support
+# Uses the Debian cross compiler to build a native mingw-w64 gcc for:
+#
+# - Host: win32
+# - Target: multilib (win32 and win64)
+# - Threading model: win32
+# - Exception model: sjlj
 #
 # Based on: http://sourceforge.net/p/mingw-w64/wiki2/Native%20Win64%20compiler/
 #
@@ -136,3 +141,9 @@ RUN \
 	CPPFLAGS="-I$PREFIX/include" LDFLAGS="-L$PREFIX/lib" $SRC/mingw-w64-v4.0.2/configure --host=x86_64-w64-mingw32 --prefix=$PREFIX --enable-lib64 && \
 	make && \
 	make install
+
+RUN \
+	cd $DEST && \
+	zip --symlinks -r $TARGET-multi.zip . && \
+	mv $TARGET-multi.zip ~
+
