test without -dev

--- a/multilib-w64-mingw32/Dockerfile
+++ b/multilib-w64-mingw32/Dockerfile
@@ -18,7 +18,7 @@ RUN \
 	apt-get update && \
 	apt-get -y dist-upgrade && \
 	apt-get install -y wget make bzip2 gcc g++ texinfo m4 zip \
-	mingw-w64 mingw-w64-x86-64-dev mingw-w64-i686-dev
+	mingw-w64
 
 RUN \
 	chmod 777 /usr/local/include	
@@ -149,5 +149,3 @@ RUN \
 	cd $DEST && \
 	zip --symlinks -r $TARGET-multi.zip . && \
 	mv $TARGET-multi.zip ~
-
-USER root
